<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="setting_fonts">
        <item>Gothic 14</item>
        <item>Gothic 14 bold</item>
        <item>Gothic 18</item>
        <item>Gothic 18 bold</item>
        <item>Gothic 24</item>
        <item>Gothic 24 bold</item>
        <item>Gothic 28</item>
        <item>Gothic 28 bold</item>
        <item>Bitham 30 black</item>
        <item>Bitham 42 bold</item>
        <item>Bitham 42 light</item>
        <item>Roboto 21 condensed</item>
        <item>Droid Serif 28 bold</item>
    </string-array>
    <string-array name="setting_fonts_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

    <string name="app_name">Pebble RSS</string>
    <string name="title_activity_main">Feeds</string>
    <string name="title_activity_feed">Feed</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="message_donation">Like this program? Please donate to a charity of your choice. My suggestion:</string>
    <string name="message_libraries_used">This program uses the following libraries:</string>
    <string name="message_no_feeds">No feeds founds.</string>
    <string name="message_feed_invalid">This feed appears to be invalid.</string>
    <string name="message_deploy_failed">Unable to write to external memory.</string>
    <string name="message_login_successful">Login successful.</string>
    <string name="message_login_failed">Login failed.</string>
    <string name="watchapp_update_title">Update available</string>
    <string name="watchapp_update_message">Would you like to update the watch app?</string>
    <string name="data_warning_title">Warning</string>
    <string name="data_warning_message">Using RSS feeds can consume large amounts of data. The developer is not responsible for charges that may apply.</string>
    <string name="button_positive">Yes</string>
    <string name="button_negative">No</string>
    <string name="button_agree">I agree</string>
    <string name="button_disagree">I disagree</string>
    <string name="setting_section_pebble">Watch app</string>
    <string name="setting_title_cellheight">List row height</string>
    <string name="setting_title_feedfont">Feed list font</string>
    <string name="setting_title_itemfont">Feed item list font</string>
    <string name="setting_title_messagefont">Item text font</string>
    <string name="setting_section_canvasplugin">Data Usage</string>
    <string name="setting_title_canvas_enabled">Background feed refresh enabled</string>
    <string name="setting_title_canvas_disabled">Background feed refresh disabled</string>
    <string name="setting_cellheight">cellheight</string>
    <string name="setting_feedfont">feedfont</string>
    <string name="setting_itemfont">itemfont</string>
    <string name="setting_messagefont">messagefont</string>
    <string name="setting_backgrounddata">backgrounddata</string>
    <string name="color_feed_id">#808080</string>
    <string name="feed_title_url">URL</string>
    <string name="feed_title_name">Feed name</string>
    <string name="feed_title_refresh">Refresh interval</string>
    <string name="feed_title_retention">Retention period</string>
    <string name="feed_download_images">Download images</string>
    <string name="feed_unit_hours">hours</string>
    <string name="feed_unit_minutes">minutes</string>
    <string name="feed_username">Username</string>
    <string name="feed_password">Password</string>
    <string name="feed_login">Login</string>
    <string name="menu_add_feed">Add feed</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete_feed">Delete</string>
    <string name="menu_install_app">Install watch app</string>
    <string name="main_item_count">items</string>
    <string name="menu_compact">Compact database</string>
    <string name="menu_beta_app">Install watch app (2.0-BETA5)</string>

</resources>