<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/setting_section_pebble" >
        <ListPreference
            android:defaultValue="5"
            android:entries="@array/setting_fonts"
            android:entryValues="@array/setting_fonts_values"
            android:key="@string/setting_feedfont"
            android:title="@string/setting_title_feedfont" >
        </ListPreference>
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/setting_fonts"
            android:entryValues="@array/setting_fonts_values"
            android:key="@string/setting_itemfont"
            android:title="@string/setting_title_itemfont" >
        </ListPreference>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_fonts"
            android:entryValues="@array/setting_fonts_values"
            android:key="@string/setting_messagefont"
            android:title="@string/setting_title_messagefont" >
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_section_canvas" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/setting_enablecanvas"
            android:summaryOff="@string/setting_title_canvas_disabled"
            android:summaryOn="@string/setting_title_canvas_enabled" />
    </PreferenceCategory>

</PreferenceScreen>